# cainteoir-engine

./: .gitignore  CHANGELOG.md  COPYING.CC_BY_30  COPYING.W3C  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  autogen.sh  build.sh  configure.ac  turtle
android/: ndk-configure
css/: minimalist.css  underwater.css
data/: cainteoir.xml  dialects.rdf  languages.py  languages.rdf  magic  parsetext-fsm.dot  parts-of-speech.rdf  private-use.rdf  unicode.py  unicode.txt
data/accents/: cmu.ptp  en-029.ptp  en-GB-scotland.ptp  en-GB-x-brummie.ptp  en-GB-x-gbclan.ptp  en-GB-x-lancastr.ptp  en-GB-x-rp.ptp  en-IE.ptp  en-US.ptp
data/css/: counterstyles.css
data/dictionary/: names.dict
data/phoneme-transcriptions/: ascii-ipa.phon  mkchart.py  phoneme-features.csv  sampa-en.phon
data/phonemes/: arpabet.phon  ascii-ipa.phon  ipa.phon  mkchart.py  phoneme-features.csv  x-sampa.phon
data/phonemeset/: arpabet.phon  ascii-ipa.phon  cmu.phon  cxs.phon  ipa.phon  mrpa.phon  radio.phon  timit.phon  x-sampa.phon  x-sampa~base.phon
data/unicode/: unicode.py
debian/: cainteoir-data.install  cainteoir-dictionary.install  cainteoir.install  changelog  control  copyright  libcainteoir-dev.install  libcainteoir0.install  lucid.patch  metadata.install  oneiric.patch  phoneme-converter.install  rules  vim-syntax-cainteoir.install
debian/patches/: enable-libav-media-overlays.patch  sid.patchset  unstable.patchset
docs/: ReleaseNotes.md  accents-and-dialects.md  cainteoir-engine.doxyconf  cainteoir-engine.doxyconf.in  cainteoir.css  footer.html  header.html  langdb-format.md  mkapidocs.py  transcriptions-en.md  voicedb-format.md
docs/api/: cainteoir-engine.doxyconf
docs/design/: audio-output.html  document-processing.html  frontends.html  index.html  languages-voices-accents-and-dialects.md  numbers.md  phoneme-morphology.md  phoneme-transcription-schemes.md  phonemes.html  speech-corpus.html  text-corpus.html  text-processing.html  voxsynth.html
docs/doxygen/: footer.html  header.html
docs/implementation-status/: css-cainteoir.csv  css-index.csv  css.csv  css21.csv  css21.xml  css3.csv  css3counterstyles.csv  css3counterstyles.xml  css3fonts.csv  css3fonts.xml  css3units.csv  css3units.xml  csv2html.py  document.csv  epub.csv  epub201.csv  epub30.csv  html-meta.csv  html-whatwg.csv  html-whatwg.xml  html.csv  html4.csv  html40.xml  html401.xml  html5.csv  html5.xml  metadata.csv  mime.csv  n-quads-write.csv  n-quads2008-write.csv  n-triples-write.csv  n-triples2004-write.csv  ncx.csv  ncx2005.csv  ncx2005.xml  nquads2008.xml  ntriples2004.xml  ocf.csv  ocf201.csv  ocf201.xml  (+58 more)
m4/: cxx11.m4
po/: Makevars  POTFILES.in
src/: compatibility.hpp  i18n.h  options.hpp
src/apps/: cainteoir.cpp  cainteoir.man  dictionary.cpp  dictionary.man  doc2doc.cpp  metadata.cpp  metadata.man  phoneme-converter.cpp  phoneme-converter.man  sigproc.cpp  tagcloud.cpp
src/cainteoir-engine/: epub.py  metadata.py
src/css/: counterstyles.css
src/examples/: doc2doc.cpp  musicplayer.cpp  sigproc.cpp  tagcloud.cpp  voice-synthesizer.cpp
src/experimental/: README.md  mbrola.cpp  synthesizer.cpp
src/libcainteoir/: cainteoir_file_reader.cpp  cainteoir_file_reader.hpp  document.cpp  encoding.cpp  espeak_engine.cpp  languages.cpp  mimetype.cpp  mimetype_database.hpp  object.cpp  ogg_audio.cpp  path.cpp  platform.cpp  pulse_audio.cpp  unicode.cpp  wav_audio.cpp
src/schema/: rdf-schema.rdf  text-to-speech.rdf
tests/: accent.py  algorithm.cpp  buffer.cpp  complex.cpp  content.cpp  dictionary.cpp  dictionary.py  diphones.py  duration.cpp  encoding.cpp  epub-metadata.py  events.cpp  events.py  extract-metadata.py  harness.py  htmltree.py  l2p_transducer.cpp  languages.cpp  letter2phoneme.py  make_stressed.cpp  media_stream.py  metadata-rdfliteral.py  metadata-rdfresource.py  metadata-rdftriple.py  metadata-tests.py  metadata.py  mimetype.cpp  multiword_entry.cpp  ntriple_formatter.cpp  object.cpp  opf-metadata.py  parsetext.cpp  parsetext.py  path.cpp  pho_file.cpp  phoneme.cpp  phoneme_stress.cpp  phoneme_stress.py  phonemeset.py  pitch_model.cpp  (+29 more)
tests/accent/: match-at-end.cmu  match-at-end.ipa
tests/epub/: missing.events  simple.events
tests/epub2/: escaped-space.epub.archive  escaped-space.events  file-in-subdir.epub.archive  file-in-subdir.events  mimetype-at-end.epub.archive  missing-html-file.opf  missing.epub.archive  missing.events  simple-all.n3  simple.epub.archive  simple.events
tests/html/: entities.events  entities.html  entities.xhtml  headings.events  simple.html  with-script.html
tests/http/: basic-1.0.txt  basic-1.1-lfonly.txt  basic-1.1.txt  basic.events  header-only-1.0.events  header-only-1.0.txt  header-only-1.1.events  header-only-1.1.txt
tests/letter2phoneme/: cantonese.langdef  cantonese.ps  cantonese.rewrite  cantonese.txt  context.langdef  context.ps  context.txt  japanese.langdef  japanese.ps  japanese.rewrite  japanese.txt  left.ps  left.txt  mandarin.langdef  mandarin.ps  mandarin.rewrite  morpheme.ps  morpheme.rewrite  morpheme.txt  position.ps  position.txt  right.ps  right.txt
tests/mime/: encoding-utf8.txt  encoding-win1252.txt  encoding.events
tests/ncx/: empty-toc-with-title.ncx  simple.n3
tests/ocf/: simple.ocf
tests/opf-metadata/: dublincore-contributor.n3  dublincore-contributor.opf  dublincore-coverage.n3  dublincore-creator.n3  dublincore-creator.opf  dublincore-date.n3  dublincore-date.opf  dublincore-format.opf  dublincore-identifier.n3  dublincore-identifier.opf  dublincore-language.n3  dublincore-publisher.opf  dublincore-rights.n3  dublincore-rights.opf  dublincore-source.n3  dublincore-source.opf  dublincore-subject.n3  dublincore-title.n3  dublincore-title.opf  dublincore-type.n3  dublincore-type.opf  dublincore-with-language.n3  dublincore-with-language.opf  dublincore.n3  dublincore.opf
tests/parse-text/: ascii-punctuation.pt  ascii-punctuation.txt  number.pt  number.txt  simple.pt
tests/phoneme_stress/: pattern.cxs  syllable-stressed-cv-nosep.cxs  syllable-stressed-cv.syl  (+18 more)
tools/: espeak-phonemes  fsm  sort-dictionary
(+2316 files in other folders)
